src/test/ui/lifetimes/issue-46983-expected-return-static.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/issue-46983-expected-return-static.rs:2:5
   |
LL | fn foo(x: &u32) -> &'static u32 {
   |           ---- the type of `x` does not have lifetime `'static'`
LL |     &*x
   |     ^^^ lifetime `'static` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
